[package]
name = "sayme"
version = "0.1.0"
edition = "2021"
authors = ["Angelo <angelozam17@gmail.com>"]
license = "MIT"
description = "A GPT-3 CLI wrapper for developers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
colored = "2.0.0"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde_json = {version = "1.0.96", default-features = false}
spinners = "4.1.0"

