[package]
name = "sayme"
version = "0.1.1"
edition = "2021"
authors = ["Angelo <angelozam17@gmail.com>"]
license = "MIT"
description = "A GPT-3 CLI wrapper for developers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
async-openai = "0.11.1"
bat = "0.23.0"
clap = { version = "4.3.1", features = ["derive"] }
colored = "2.0.0"
question = "0.2.2"
spinners = "4.1.0"
tokio = { version = "1.25.0", features = ["full"] }

